--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-{
   "expo": {
     "name": "genshin-impact-app",
     "slug": "genshin-impact-app",
@@ -17,9 +16,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.genshin.app",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
+      "package": "com.genshin.app",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
