--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+../
 
 # macOS
 .DS_Store
 
 ./google-services.json
 ./GoogleService-Info.plist
+/App/*.env
