--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ web-build/
 # macOS
 .DS_Store
 
-./google-services.json
-./GoogleService-Info.plist
+google-services.json
+GoogleService-Info.plist
